--- a/app/src/index.html
+++ b/app/src/index.html
@@ -23,70 +23,7 @@
                 <div></div>
             </div>
         </div>
-        <div class="mt-20 p-10">
-            <h1 class="text-4xl font-bold">Playlist</h1>
-            <div class="flex overflow-x-auto mt-2">
-                <div class="flex-none w-60 mr-5">
-                    <div class="w-52 h-52 bg-white"></div>
-                </div>
-                <div class="flex-none w-60 mr-5">
-                    <div class="w-52 h-52 bg-white"></div>
-                </div>
-                <div class="flex-none w-60 mr-5">
-                    <div class="w-52 h-52 bg-white"></div>
-                </div>
-                <div class="flex-none w-60 mr-5">
-                    <div class="w-52 h-52 bg-white"></div>
-                </div>
-                <div class="flex-none w-60 mr-5">
-                    <div class="w-52 h-52 bg-white"></div>
-                </div>
-                <div class="flex-none w-60 mr-5">
-                    <div class="w-52 h-52 bg-white"></div>
-                </div>
-                <div class="flex-none w-60 mr-5">
-                    <div class="w-52 h-52 bg-white"></div>
-                </div>
-                <div class="flex-none w-60 mr-5">
-                    <div class="w-52 h-52 bg-white"></div>
-                </div>
-            </div>
-            <h1 class="text-4xl font-bold mt-5">Playlist2</h1>
-            <div class="flex overflow-x-auto mt-2">
-                <div class="flex-none w-60 mr-5">
-                    <div class="w-52 h-52 bg-white"></div>
-                </div>
-                <div class="flex-none w-60 mr-5">
-                    <div class="w-52 h-52 bg-white"></div>
-                </div>
-                <div class="flex-none w-60 mr-5">
-                    <div class="w-52 h-52 bg-white"></div>
-                </div>
-                <div class="flex-none w-60 mr-5">
-                    <div class="w-52 h-52 bg-white"></div>
-                </div>
-                <div class="flex-none w-60 mr-5">
-                    <div class="w-52 h-52 bg-white"></div>
-                </div>
-            </div>
-            <h1 class="text-4xl font-bold mt-5">Playlist3</h1>
-            <div class="flex overflow-x-auto mt-2">
-                <div class="flex-none w-60 mr-5">
-                    <div class="w-52 h-52 bg-white"></div>
-                </div>
-                <div class="flex-none w-60 mr-5">
-                    <div class="w-52 h-52 bg-white"></div>
-                </div>
-                <div class="flex-none w-60 mr-5">
-                    <div class="w-52 h-52 bg-white"></div>
-                </div>
-                <div class="flex-none w-60 mr-5">
-                    <div class="w-52 h-52 bg-white"></div>
-                </div>
-                <div class="flex-none w-60 mr-5">
-                    <div class="w-52 h-52 bg-white"></div>
-                </div>
-            </div>
+        <div id="playlists" class="mt-20 p-10">
         </div>
     </div>
     <!-- 検索画面 -->
@@ -232,6 +169,7 @@
     </div>
 
     <!-- モーダル-->
+    <div class="overlay hidden"></div>
     <div class="modal hidden">
         <button class="close-modal">&times;</button>
         <div>
