--- a/app/src/index.html
+++ b/app/src/index.html
@@ -14,7 +14,7 @@
     <!-- メイン部分 -->
     <!-- ホーム画面 -->
     <div id="main-home" class="main-content ml-40 mb-[270px]">
-        <div class="fixed top-0 left-0 right-0 ml-40 h-20 bg-base">
+        <div class="fixed top-0 left-0 right-0 ml-40 h-20  z-10 bg-base">
             <div class="flex justify-between p-4">
                 <div></div>
                 <div class="flex text-5xl font-extralight">
@@ -28,18 +28,20 @@
         </div>
     </div>
     <!-- 検索画面 -->
-    <div id="main-search" class="main-content  ml-40 mb-[270px]">
-        <div class="fixed top-0 left-0 right-0 ml-40 h-20 bg-base">
+    <div id="main-search" class="main-content ml-40 mb-[270px]">
+        <div class="fixed top-0 left-0 right-0 ml-40 h-20  z-10 bg-base">
             <div class="flex justify-between p-4">
                 <div></div>
                 <div class="flex w-3/5 h-10 m-4 overflow-hidden rounded-xl outline outline-2 text-sub2">
-                    <input id="search_text" value="" type="text" placeholder="  Search" class="w-5/6 rounded-l-xl bg-sub4">
-                    <button class="w-1/6" id="search"><img src="../static/search.svg" class="h-8 ml-auto mr-auto" alt=""></button>
+                    <input id="search_text" value="" type="text" placeholder="  Search"
+                        class="w-5/6 rounded-l-xl bg-sub4">
+                    <button class="w-1/6" id="search"><img src="../static/search.svg" class="h-8 ml-auto mr-auto"
+                            alt=""></button>
                 </div>
                 <div></div>
             </div>
         </div>
-        <div id="search_result" class="mt-20 mb-20 p-10">
+        <div id="search_result" class="mt-20 mb-20 p-10  z-0">
         </div>
     </div>
 
@@ -58,8 +60,7 @@
             </li>
             <li>
                 <p>Playlist</p>
-                <button
-                    id="addPlaylist"
+                <button id="addPlaylist"
                     class="block transition ease-in-out py-1 my-3 w-full text-xl text-center font-thin rounded-lg hover:bg-sub3">
                     <div class="flex items-center text-center">
                         <img src="../static/add.svg" class="h-8 mx-2">
@@ -67,15 +68,18 @@
                     </div>
                 </button>
             </li>
+            <li>
+                <button id="oauthSpotify">Spotifyを登録</button>
+            </li>
         </ul>
     </div>
 
     <!-- 下の再生部分  -->
-    <div class="fixed bottom-0 left-0 right-0 ml-[480px] h-[270px] p-5 bg-sub2">
+    <div class="fixed bottom-0 left-0 right-0 ml-[480px] h-[270px] p-5 z-20 bg-sub2">
         <div class="flex flex-col h-full justify-around">
             <div class="text-center">
-                <p id="music-title" class="text-3xl">曲名</p>
-                <p id="music-singer" class="text-xl">歌手</p>
+                <p id="music-title" class="text-3xl"></p>
+                <p id="music-singer" class="text-xl"></p>
             </div>
             <div class="flex items-center justify-center">
                 <div class="h-8 mr-8">
@@ -95,42 +99,47 @@
             </div>
             <div class="flex items-center justify-center">
                 <img src="../static/vol-min.svg" alt="" class="ml-2 h-6">
-                <input type="range" min="0" max="100" class="w-1/3">
+                <input type="range" min="0" max="100" id="slider_volume" class="w-1/3">
                 <img src="../static/vol-max.svg" alt="" class="ml-2 h-6">
             </div>
         </div>
     </div>
 
     <!-- 再生部分 -->
-    <div class="fixed bottom-0 left-0 bg-white w-[480px] h-[270px]">
+    <div class="fixed bottom-0 left-0 bg-white w-[480px] h-[270px] z-30">
         <div id="youtube" class="w-full h-full"></div>
+        <div id="spotify" class="w-full h-full">
+            <img src="" id="spotify_thumb" alt="">
+        </div>
     </div>
 
     <!-- プレイリストモーダル-->
-    <div class="overlay hidden"></div>
-    <div id="playlistModal" class="modal hidden">
-        <button class="close-modal">&times;</button>
+    <!-- <div class="overlay hidden"></div> -->
+    <div id="playlistModal"
+        class="fixed rounded inset-1/2 translate-x-[-50%] translate-y-[-50%] w-3/4 h-80 p-10 z-50 bg-sub3 hidden">
+        <button class="absolute top-8 right-8 text-sub1 text-4xl close-modal">&times;</button>
         <div>
             <form id="addPlaylistForm" name="addPlaylist">
-                <p>プレイリストを作成</p>
+                <p class="text-2xl mb-4">プレイリストを作成</p>
                 <label for="name" class="text-left">Name</label>
                 <input type="text" name="name" class="w-full h-10 mb-4 text-sub3" required>
-                <button type="submit" class="rounded bg-green-400">作成</button>
+                <button type="submit" class="absolute rounded bg-sub2 px-4 py-2 bottom-8 right-8">保存</button>
             </form>
         </div>
     </div>
 
     <!-- コンテンツ追加モーダル -->
-    <div id="ContentModal" class="modal hidden">
-        <button class="close-modal">&times;</button>
+    <div id="ContentModal"
+        class="fixed rounded inset-1/2 translate-x-[-50%] translate-y-[-50%] w-3/4 h-80 p-10 z-50 bg-sub3 hidden">
+        <button class="absolute top-8 right-8 text-sub1 text-4xl close-modal">&times;</button>
         <div>
             <form id="addContentForm" name="addContent">
-                <p>プレイリストを選択</p>
+                <p class="text-2xl mb-4">プレイリストを選択</p>
                 <div class="flex justify-center">
                     <div id="contentFormBody">
                     </div>
                 </div>
-                <button type="submit" class="rounded bg-green-400">保存</button>
+                <button type="submit" class="absolute rounded bg-sub2 px-4 py-2 bottom-8 right-8">保存</button>
             </form>
         </div>
     </div>
