--- a/app/src/login.html
+++ b/app/src/login.html
@@ -13,10 +13,10 @@
         <div class="flex flex-col w-1/3">
             <form action="" id="loginForm" name="login">
                 <h1 class="text-8xl self-center text-center font-semibold mb-16">PlayMix</h1>
-                <label for="id" class="text-left">ID</label>
-                <input type="text" name="id" class="w-full h-10 mb-4 text-sub3" required>
+                <label for="id" class="text-left">E-mail</label>
+                <input type="email" name="id" class="w-full h-10 mb-4 p-2 text-sub3" required>
                 <label for="password" class="text-left">Password</label>
-                <input type="password" name="password" class="w-full h-10 mb-4 text-sub3" required>
+                <input type="password" name="password" class="w-full h-10 mb-4 p-2 text-sub3" required>
                 <input type="submit" value="Login" class="w-full h-16 bg-sub3 hover:bg-sub3/50">
             </form>
         </div>
